--- a/templates/distribution/upload.html
+++ b/templates/distribution/upload.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+python{% extends 'base.html' %}
 {% load static %}
 
 {% block title %}Upload Release - Nigerian Music Distribution Platform{% endblock %}
